# Splatshop

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: common.cmake  glfw.cmake
docs/: splattraining.md
include/: CURuntime.h  CudaModularProgram.h  DesktopVRControls.h  GLRenderer.h  ImageLoader.cpp  ImageLoader.h  Mesh.h  MouseEvents.h  OrbitControls.h  Points.h  ProxyControls.h  Runtime.h  Splats.h  unsuck.hpp  unsuck_platform_specific.cpp
libs/ImGuizmo-1.83/: ImGuizmo.cpp
libs/glm/glm/detail/: func_common.inl  func_exponential.inl  func_geometric.inl  func_matrix.inl  func_trigonometric.inl
libs/glm/glm/gtc/: matrix_transform.inl  quaternion.inl
libs/glm/glm/gtx/: matrix_decompose.inl
libs/imgui/: imgui.h  imgui_internal.h  imgui_widgets.cpp
resources/images/: symbols.kra
resources/vractions/: splatpainter_actions.json  splatpainter_bindings_generic.json
src/: ActionHistory.h  AssetLibrary.h  CudaVirtualMemory.h  GLRenderer.cpp  HostDeviceInterface.h  NOpenVRHelper.h  OpenVRHelper.h  PointsManagement.h  SplatEditor.cpp  SplatEditor.h  SplatEditor_draw.h  SplatEditor_render.h  SplatEditor_update.h  SplatsManagement.h  common.h  gaussians_editing.cu  gaussians_rendering.cu  gaussians_rendering_bandwidth.cu  gaussians_rendering_fragintersection_3dgs.cu  gaussians_rendering_fragintersections.cu  gaussians_rendering_soa.cu  main.cpp  math.cuh  shutils.cuh  tween.h  utils.cuh
src/GPUPrefixSums/: ChainedScanDecoupledLookback.cu  GPUPrefixSums.h  GPUPrefixSumsCS.h  ReduceThenScan.cu  ScanCommon.cuh  Utils.cuh
src/GPUSorting/: GPUSorting.cpp  GPUSorting.h  GPUSortingOneSweep.h  OneSweep.cu  RadixSort.cu  Utils.cuh
src/actions/: BrushSelectAction.h  GizmoAction.h  InputAction.h  PlaceAssetAction.h  RectSelectAction.h  SpherePaintAction.h  SphereSelectAction.h  ThreePointAlignAction.h  VR_BrushPaintAction.h  VR_BrushSelectAction.h  VR_PlaceAssetAction.h  VR_TransformSelectionAction.h
src/gui/: ImguiPage.h  assets.h  colorCorrection.h  debugInfo.h  dev.h  editing.h  gettingStarted.h  guivr.h  imutils.h  layers.h  menubar.h  perf.h  saveFile.h  settings.h  stats.h  todos.inc  toolbar.h
src/loader/: GLBLoader.h  GSPlyLoader.h  LASLoader.h  PLYHeightmapLoader.h  SplatsyFilesLoader.h  SplatsyLoader.h
src/render/: helpers.cu  lines.cu  points.cu  render_gaussians.cuh  render_gaussians_fetchfilter.cuh  render_gaussians_points.cuh  render_gaussians_solid.cuh  render_gaussians_subsets.cuh  render_heatmap.cuh  triangles.cu
src/scene/: ImguiNode.h  SNPoints.h  SNSplats.h  SNTriangles.h  Scene.h  SceneNode.h
src/unix/: GLRenderer_linux.cpp
src/update/: inputHandlingDesktop.h  inputHandlingVR.h
src/win32/: GLRenderer_win32.cpp  OpenVRHelper.cpp
src/writer/: GSPlyWriter.h  SplatsyFilesWriter.h  SplatsyPlyWriter.h  SplatsyWriter.h
